# CGE-Dev

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
Tester/: CMakeLists.txt
Tester/res/graphics/: graphics.index
Tester/res/graphics/animations/: test.anim
Tester/src/: Main.cpp
Tester/src/States/: PlayingState.cpp  PlayingState.h
doc/html/: Animation_8h_source.html  Animator_8h_source.html  BasicShader_8h_source.html  Button_8h_source.html  Camera_8h_source.html  ConsoleColor_8h_source.html  DebugBreak_8h_source.html  Engine_8h_source.html  Entity_8h_source.html  FileManager_8h_source.html  GLDebug_8h_source.html  GUIComponent_8h_source.html  GUIManager_8h_source.html  GUIShader_8h_source.html  Hitbox_8h_source.html  Input_8h_source.html  Loader_8h_source.html  Log_8h_source.html  MeshAnimation_8h_source.html  MeshBuilder_8h_source.html  Mesh_8h_source.html  Panel_8h_source.html  PerlinNoise_8h_source.html  RessourceManager_8h_source.html  ShaderProgram_8h_source.html  StateManager_8h_source.html  State_8h_source.html  TextRenderer_8h_source.html  TextShader_8h_source.html  Texture_8h_source.html  TexturedMesh_8h_source.html  ThreadProcess_8h_source.html  TimeUtils_8h_source.html  TwoDAnimatedMesh_8h_source.html  TwoDAnimation_8h_source.html  Window_8h_source.html  XMLElementArrayLoader_8h_source.html  annotated.html  classCGE_1_1Animations_1_1MeshAnimation.html  classCGE_1_1Animations_1_1TwoDAnimation-members.html  (+89 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  (+22 more)
doc/latex/: annotated.tex  classCGE_1_1Animations_1_1MeshAnimation.tex  classCGE_1_1Animations_1_1TwoDAnimation.eps  classCGE_1_1Animations_1_1TwoDAnimation.tex  classCGE_1_1Entities_1_1Entity.tex  classCGE_1_1GUI_1_1Button.eps  classCGE_1_1GUI_1_1Button.tex  classCGE_1_1GUI_1_1GUIComponent.eps  classCGE_1_1GUI_1_1GUIComponent.tex  classCGE_1_1GUI_1_1GUIShader.eps  classCGE_1_1GUI_1_1GUIShader.tex  classCGE_1_1GUI_1_1Panel.eps  classCGE_1_1GUI_1_1Panel.tex  classCGE_1_1GUI_1_1Text_1_1TextShader.eps  classCGE_1_1GUI_1_1Text_1_1TextShader.tex  classCGE_1_1IO_1_1Window.tex  classCGE_1_1Loader_1_1Mesh.tex  classCGE_1_1Loader_1_1Texture.tex  classCGE_1_1Loader_1_1TexturedMesh.eps  classCGE_1_1Loader_1_1TexturedMesh.tex  classCGE_1_1Loader_1_1TwoDAnimatedMesh.eps  classCGE_1_1Loader_1_1TwoDAnimatedMesh.tex  classCGE_1_1Physics_1_1Hitbox.tex  classCGE_1_1Shader_1_1BasicShader.eps  classCGE_1_1Shader_1_1BasicShader.tex  classCGE_1_1Shader_1_1ShaderProgram.eps  classCGE_1_1Shader_1_1ShaderProgram.tex  classCGE_1_1State_1_1State.tex  classCGE_1_1Utils_1_1PerlinNoise.tex  classCGE_1_1Utils_1_1TPSClock.tex  classCGE_1_1Utils_1_1ThreadProcess.tex  classHitbox.tex  hierarchy.tex  md_README.tex  namespaceCGE_01_1_1GUI_1_1Text_1_1TextRenderer.tex  namespaceCGE_1_1Entities.tex  namespaceCGE_1_1GUI.tex  namespaceCGE_1_1IO.tex  namespaceCGE_1_1IO_1_1input.tex  namespaceCGE_1_1Loader.tex  (+11 more)
include/: Engine.h
include/Animation/: Animation.h  Animator.h  MeshAnimation.h  ModelAnimation.h  TextureAnimation.h  TwoDAnimation.h
include/Entities/: Entity.h  Player.h
include/GUI/: Button.h  GUIComponent.h  GUIManager.h  GUIRenderer.h  GUIShader.h  Panel.h
include/GUI/Text/: TextRenderer.h  TextShader.h
include/IO/: Display.h  Input.h  Window.h
include/Loader/: Loader.h  Model.h  PNGDecoder.h  RessourceManager.h  Texture.h
include/Loader/Meshes/: Mesh.h  MeshBuilder.h  TexturedMesh.h  TwoDAnimatedMesh.h
include/Loader/Models/: AnimatedModel.h  MeshBuilder.h  MeshlBuilder.h  Model.h  TexturedModel.h  TwoDAnimatedModel.h
include/Physics/: BoxCollider.h  Collider.h  Hitbox.h  Ray.h  SphereCollider.h
include/Renderer/: WorldRenderer.h
include/Shader/: ProjectionMatrix.h  ShaderProgram.h
include/Shader/MeshShader/: BasicShader.h
include/Shader/ModelShader/: BasicShader.h
include/State/: State.h  StateManager.h
include/Text/: TextRenderer.h  TextShader.h
include/Utils/: ConsoleColor.h  DebugBreak.h  FileManager.h  GLDebug.h  Log.h  MathHelper.h  PerlinNoise.h  ThreadProcess.h  TimeUtils.h  Types.h  XMLElementArrayLoader.h
include/View/: Camera.h
include/World/: World.h
include/World/Entities/: Entity.h  Player.h
include/World/Terrain/: Terrain.h  TwoDTerrain.cpp  TwoDTerrain.h
src/: Engine.cpp
src/Animation/: Animator.cpp  MeshAnimation.cpp  ModelAnimation.cpp  TextureAnimation.cpp  TwoDAnimation.cpp
src/Entities/: Entity.cpp  Player.cpp
src/GUI/: Button.cpp  GUIComponent.cpp  GUIManager.cpp  GUIRenderer.cpp  GUIShader.cpp  Panel.cpp
src/GUI/Text/: TextRenderer.cpp  TextShader.cpp
src/IO/: Display.cpp  Input.cpp  Window.cpp
src/Loaders/: Loader.cpp  OBJLoader.cpp  PNGDecoder.cpp  RessourceManager.cpp  Texture.cpp
src/Loaders/FileLoader/: DAELoader.cpp  OBJLoader.cpp
src/Loaders/Meshes/: Mesh.cpp  MeshBuilder.cpp  TexturedMesh.cpp  TwoDAnimatedMesh.cpp
src/Loaders/Models/: AnimatedModel.cpp  Mesh.cpp  MeshBuilder.cpp  MeshlBuilder.cpp  Model.cpp  TexturedModel.cpp  TwoDAnimatedModel.cpp
src/Physics/: BoxCollider.cpp  Hitbox.cpp  Ray.cpp  SphereCollider.cpp
src/Renderer/: WorldRenderer.cpp
src/Shader/: ProjectionMatrix.cpp  ShaderProgram.cpp
src/Shader/MeshShader/: BasicShader.cpp
src/Shader/ModelShader/: BasicShader.cpp
src/State/: StateManager.cpp
src/Text/: TextRenderer.cpp  TextShader.cpp
src/Utils/: FileManager.cpp  GLDebug.cpp  PerlinNoice.cpp  ThreadProcess.cpp  TimeUtils.cpp  XMLElementArrayLoader.cpp
src/View/: Camera.cpp
src/World/: World.cpp
src/World/Entities/: Entity.cpp  Player.cpp
src/World/Terrain/: Terrain.cpp
test/: CMakeLists.txt
test/src/: Main.cpp
(+2 files in other folders)
